# FM-tree

./: README.md
FMTree-src/: CMakeLists.txt  FMtree  Makefile  bit_array.c  bit_array.h  divsufsort.c  divsufsort.h  fm-tree.cpp  fm-tree.h  main.cpp  suftest.c  test_me.cpp
FMTree-src/lib/: CMakeLists.txt
FMTree-src/test/: ecoli.txt  test-short.txt  test2.txt
documentation/: FM-tree.docx  SeminarFMTree.doc  SeminarFMTree.docx  ~$M-tree.docx
libdivsufsort-lite/: divsufsort.c  divsufsort.h  suftest.c  test.txt
src/: CMakeCache.txt  CMakeLists.txt  FMtree  Makefile  cmake_install.cmake  divsufsort.c  divsufsort.h  fm-tree.cpp  fm-tree.h  main.cpp  patterns.txt  result.txt
src/test/: test_A_1.txt  test_A_2.txt  test_B_1.txt  test_B_2.txt  test_C_1.txt  test_C_2.txt  test_D_1.txt  test_D_2.txt  test_E_1.txt  test_E_2.txt
